quelque ligne ecri sur le contrat

--- a/templates/partenaire/index.html.twig
+++ b/templates/partenaire/index.html.twig
@@ -23,13 +23,13 @@
     <p>PRÉAMBULE :
 Attendu que Wari est autorisée par la Loi de Transfert d'argent, à effectuer des opérations de
 transfert d’argent.
-Wari et {{Partenaire.RaisonSocial}} Ont décidé de nouer un partenariat
+Wari et .....................{# {{Partenaire.RaisonSocial}} #} ont décidé de nouer un partenariat
 mutuellement profitable.
 A cet effet, le présent contrat de partenariat (ci-après désigné le « Contrat ») a été conclu
 ENTRE
 Wari, dont le siège social est à Dakar 20, Rue Amadou Assane Ndoye, Dakar représentée
 par son DIRECTEUR GENERAL Monsieur Kabirou MBODJ.
-Ci-après désignée LE PARTENAIRE {{Partenaire.Prenom}} {{partenaire.Nom}} dont le siège social
+Ci-après désignée LE PARTENAIRE................... ..... {# {{Partenaire.Prenom}} {{partenaire.Nom}} #} dont le siège social
 ………………………………………………………………………est situé au -(Sénégal), représentée
 par…………………………………………………agissant en qualité de gérant,
 Ci-après désignée LE DISTRIBUTEUR
