--- a/frontend/src/app/ajout-compte/ajout-compte.component.html
+++ b/frontend/src/app/ajout-compte/ajout-compte.component.html
@@ -14,19 +14,19 @@
     <div>
     <mat-form-field floatLable="auto" appearence="fill">
       <mat-label>Password</mat-label>
-      //
+      
       <mat-select class="form-control" formControlName="Partenaire" required>
           <mat-option>--</mat-option>
-          <mat-option *ngFor="let partenaires of partenaire" [value]={{partenaires.Id}}>
+          <mat-option *ngFor="let partenaires of partenaire" value={{partenaires.id}}>
             {{partenaires.NINEA}}
           </mat-option>
         </mat-select>
-      //
-      //<input matInput required  class="form-control" formControlName="password">
+      
+      
     </mat-form-field>
     </div>
       <div class="example-button-row">
-        <button mat-raised-button color="primary" type="submit" [disabled]="userForm.invalid">Register</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="compteForm.invalid" >Register</button>
       </div>
     </form>
   </div>
