--- a/frontend/src/app/transaction/transaction.component.html
+++ b/frontend/src/app/transaction/transaction.component.html
@@ -1,6 +1,9 @@
+<div>
+  <app-nav-bar></app-nav-bar>
+</div>
 <div class="centrer">
   <div>
-    <h4>Dépot d'argent</h4>
+    <h4>Transaction</h4>
     <hr>
   </div>
 <div>
