--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,12 +1,13 @@
-<div class="panel panel-default" >
+<div  class="container center-block"  >
+<div class="panel panel-default"  >
   <div class="panel-heading" class="div">Authentification</div>
   <div class="panel-body">
-    <form #f="ngForm" (ngSubmit)="onLogin(f.value)"> 
-        <div class="form-group">
+    <form #f="ngForm" (ngSubmit)="onLogin(f.value)" > 
+        <div class="form-group"  >
           <label class="control-label">Email</label>
           <input type="text" name="username" ngModel class="form-control">
         </div>
-        <div class="form-group">
+        <div class="form-group ">
           <label class="control-label">Password</label>
           <input type="password" name="password" ngModel class="form-control">
         </div>
@@ -14,7 +15,7 @@
     </form>
   </div>
 </div>
-
+</div>
 
 
 
