--- a/frontend/src/app/partenaire/partenaire.component.html
+++ b/frontend/src/app/partenaire/partenaire.component.html
@@ -1,3 +1,6 @@
+<div>
+<app-nav-bar></app-nav-bar>
+</div>
 <div  class="table-responsive">
 <table  class="table">
   <thead class="black white-text">
