--- a/frontend/src/app/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/nav-bar/nav-bar.component.html
@@ -10,35 +10,35 @@
 <mat-toolbar class="navbar">
   <div>DieulDioxe</div>
   <div>
-      <button mat-button [matMenuTriggerFor]="menu"  >Partenaire</button>
+      <button mat-button [matMenuTriggerFor]="menu" *ngIf="isSuperAdmin()" >Partenaire</button>
       <mat-menu #menu="matMenu">
         <button mat-menu-item  [routerLink]="['/listerPartenaire']" routerLinkActive="router-link-active" >Lister Parttenaire</button>
         <button mat-menu-item  [routerLink]="['/ajoutPartenaire']" routerLinkActive="router-link-active" >Ajout Partenaire</button>
       </mat-menu>
 
 
-      <button mat-button [matMenuTriggerFor]="user">User</button>
+      <button mat-button [matMenuTriggerFor]="user"   *ngIf="isSuperAdmin() || isAdmin()">User</button>
       <mat-menu #user="matMenu">
           <button mat-menu-item  [routerLink]="['/ajoutUser']" routerLinkActive="router-link-active" >Ajouter User</button>
           <button mat-menu-item  [routerLink]="['/listerUser']" routerLinkActive="router-link-active" >lister User</button>
-          <button mat-menu-item  [routerLink]="['/ajoutUserPartenaire']" routerLinkActive="router-link-active" >Ajout User Partenaire</button>
+          <button mat-menu-item  [routerLink]="['/ajoutUserPartenaire']" routerLinkActive="router-link-active" *ngIf="isAdmin()">Ajout User Partenaire</button>
       </mat-menu>
 
-      <button mat-button [matMenuTriggerFor]="compte">Compte</button>
+      <button mat-button [matMenuTriggerFor]="compte"   *ngIf="isSuperAdmin() || isCaissier()">Compte</button>
       <mat-menu #compte="matMenu">
-          <button mat-menu-item  [routerLink]="['/ajoutCompte']" routerLinkActive="router-link-active" >Ajouter Compte</button>
-          <button mat-menu-item  [routerLink]="['/depot']" routerLinkActive="router-link-active" >Depot</button>
+          <button mat-menu-item  [routerLink]="['/ajoutCompte']" routerLinkActive="router-link-active" *ngIf="isSuperAdmin()">Ajouter Compte</button>
+          <button mat-menu-item  [routerLink]="['/depot']" routerLinkActive="router-link-active" *ngIf="isCaissier()">Depot</button>
       </mat-menu>
 
 
 
-      <button mat-button [matMenuTriggerFor]="transaction" >Transaction</button>
+      <button mat-button [matMenuTriggerFor]="transaction" *ngIf="isUser()">Transaction</button>
       <mat-menu #transaction="matMenu">
         <button mat-menu-item  [routerLink]="['/transaction']" routerLinkActive="router-link-active" >faire une transaction</button>
         <button mat-menu-item   >Lister Transaction</button>
       </mat-menu>
 
-    <span  (click)="logout()"  [routerLink]="['/login']">Logout</span>
+    <span  (click)="logout()"  [routerLink]="['/login']" class="btn">Logout</span>
   </div>
 </mat-toolbar>
 </div>
