partenaire et compte set dans la fonction register

--- a/frontend/src/app/ajout-partenaire/ajout-partenaire.component.html
+++ b/frontend/src/app/ajout-partenaire/ajout-partenaire.component.html
@@ -64,12 +64,12 @@
   </mat-form-field>
   </div>
 
-  <div>
+ <!-- <div>
       <mat-form-field floatLable="auto" appearence="fill">
         <mat-label>Numero Compte</mat-label>
         <input matInput required  class="form-control" formControlName="NumeroCompte">
       </mat-form-field>
-  </div>
+  </div>-->
   
   <div>
      <img [src]="imageurl" alt="" hidden>
