--- a/frontend/src/app/login/login.component.html
+++ b/frontend/src/app/login/login.component.html
@@ -1,6 +1,7 @@
-<div  class="container center-block"  >
+<div  class="container center-block  border top" >
 <div class="panel panel-default"  >
-  <div class="panel-heading" class="div">Authentification</div>
+  <div class="panel-heading" class="div">Authentification<hr></div>
+   
   <div class="panel-body">
     <form #f="ngForm" (ngSubmit)="onLogin(f.value)" > 
         <div class="form-group"  >
