--- a/frontend/src/app/ajout-compte/ajout-compte.component.html
+++ b/frontend/src/app/ajout-compte/ajout-compte.component.html
@@ -11,13 +11,14 @@
     <div> 
     <mat-form-field floatLable="auto" appearence="fill">
       <mat-label>Montant à déposer</mat-label>
+      <mat-icon matPrefix>euro_symbol</mat-icon>
       <input matInput required  class="form-control" formControlName="MontantDeposer">
     </mat-form-field>
     </div>
     <div>
     <mat-form-field floatLable="auto" appearence="fill">
       <mat-label>Partenaire </mat-label>
-      
+      <mat-icon matPrefix>person</mat-icon>
       <mat-select class="form-control" formControlName="Partenaire" required>
           <mat-option>--</mat-option>
           <mat-option *ngFor="let partenaires of partenaire" value={{partenaires.id}}>
