--- a/frontend/src/app/lister-user/lister-user.component.html
+++ b/frontend/src/app/lister-user/lister-user.component.html
@@ -10,6 +10,7 @@
         <th > Date d'update </th>
         <th > Profile </th>
         <th > Statut </th>
+        <th >  </th>
         
         
       </tr>
@@ -21,7 +22,7 @@
         <td>{{ users.updatedAt }}</td>
         <td>{{ users.Profile }}</td>
         <td>{{ users.Statut }}</td>
-        <a  [routerLink]="['babacar']" routerLinkActive="router-link-active"  ><mat-icon (click)="block(users.id)">lock</mat-icon></a>
+        <td><a><mat-icon (click)="block(users.id)">lock</mat-icon></a></td>
         <!--<a   ><mat-icon  (click)="unblock(user.Id)">lock_open</mat-icon></a>-->
       </tr>
     </tbody>
