--- a/frontend/src/app/transaction/transaction.component.html
+++ b/frontend/src/app/transaction/transaction.component.html
@@ -12,6 +12,7 @@
       <div>
           <mat-form-field floatLable="auto" appearence="fill">
             <mat-label>Type de transaction</mat-label>
+            <mat-icon matPrefix>edit</mat-icon>
             <mat-select class="form-control" formControlName="Type"  required>
                 <mat-option>--</mat-option>
                 <mat-option  value="envoi" (click)="envoi()">Envoi</mat-option>
@@ -19,57 +20,70 @@
               </mat-select>
           </mat-form-field>
           </div>
-
-  <div  id="r1"> 
+  
+  <div  id="r1" > 
   <mat-form-field floatLable="auto" appearence="fill" >
     <mat-label>Code Transaction</mat-label>
+    <mat-icon matPrefix>https</mat-icon>
     <input matInput   class="form-control" formControlName="CodeTransaction" >
   </mat-form-field>
   </div>
 
-  <div> 
+  <div > 
     <mat-form-field floatLable="auto" appearence="fill">
       <mat-label>Montant de l'argent</mat-label>
+      <mat-icon matPrefix>euro_symbol</mat-icon>
       <input matInput   class="form-control" formControlName="Montant">
     </mat-form-field>
   </div>
-  <div id="e1"> 
+
+
+  <div id="e1" > 
     <mat-form-field floatLable="auto" appearence="fill"  >
       <mat-label>Numero EXpediteur</mat-label>
+      <mat-icon matPrefix>stay_current_portrait</mat-icon>
       <input matInput   class="form-control" formControlName="NumeroExpediteur">
     </mat-form-field>
   </div>
 
-  <div> 
-    <mat-form-field floatLable="auto" appearence="fill">
-      <mat-label>Numero Destinataire</mat-label>
-      <input matInput   class="form-control" formControlName="NumeroDestinataire">
-    </mat-form-field>
+  <div > 
+      <mat-form-field floatLable="auto" appearence="fill"   >
+          <mat-label>Nom Complet Expéditeur</mat-label>
+          <mat-icon matPrefix>edit</mat-icon>
+          <input matInput   class="form-control" formControlName="NomCompletExpediteur">
+        </mat-form-field>
   </div>
 
-  <div id="r2"> 
+
+
+
+  <div id="r2" > 
     <mat-form-field floatLable="auto" appearence="fill"   >
       <mat-label>CNI destinataire</mat-label>
+      <mat-icon matPrefix>how_to_vote</mat-icon>
       <input matInput   class="form-control" formControlName="CNIdestinataire">
     </mat-form-field>
   </div>
 
-  <div id="e2"> 
-    <mat-form-field floatLable="auto" appearence="fill"   >
-      <mat-label>Nom Complet Expéditeur</mat-label>
-      <input matInput   class="form-control" formControlName="NomCompletExpediteur">
-    </mat-form-field>
+  <div id="e2" > 
+      <mat-form-field floatLable="auto" appearence="fill">
+          <mat-label>Numero Destinataire</mat-label>
+          <mat-icon matPrefix>stay_current_portrait</mat-icon>
+          <input matInput   class="form-control" formControlName="NumeroDestinataire">
+        </mat-form-field>
   </div>
+
 
   <div id="e3"> 
     <mat-form-field floatLable="auto" appearence="fill" >
       <mat-label>Nom Complet Destinataire</mat-label>
+      <mat-icon matPrefix>edit</mat-icon>
       <input matInput   class="form-control" formControlName="NomCompletDestinataire">
     </mat-form-field>
   </div>
   
 
-    <div class="example-button-row">
+    <div class="example-button-row mt-5">
       <button mat-raised-button color="primary" type="submit" [disabled]="transactionForm.invalid" >Valider</button>
     </div>
 
